[metadata]
name = trame-datagrid
version = 0.2.0
description = Trame widget for RevoGrid
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame_client
    # vtk
    # pandas
    # numpy
    # altair
    # mpld3
    # plotly
    # pydeck
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
